2nd Draft of updates to Volunteer Styling. Corrected bug for volunteer profile not showing.

--- a/app/assets/stylesheets/volunteers.scss
+++ b/app/assets/stylesheets/volunteers.scss
@@ -34,7 +34,7 @@ h4 {
 
 
 .picture {
-    width: 100%;
+    width: 75%;
     height: auto;
 }
 
